--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,15 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
-<title>File Uploader Widget Flat Resposive Website Template :: w3layouts</title>
-<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+<title>在线C语言代码复制/相似度检测平台</title>
 <!-- Custom Theme files -->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
-<script src="js/jquery.min.js"></script>
+<script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="File Uploader Widget Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design" />
+<meta name="keywords" content="在线C语言代码复制/相似度检测平台" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 </head>
@@ -45,17 +37,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
             
     <!-- JavaScript Includes -->
-        <script src="js/jquery.knob.js"></script>
+        <script src="{{ url_for('static', filename='js/jquery.knob.js') }}"></script>
     <!-- JavaScript Includes -->
 
     <!-- jQuery File Upload Dependencies -->
-        <script src="js/jquery.ui.widget.js"></script>
-        <script src="js/jquery.iframe-transport.js"></script>
-        <script src="js/jquery.fileupload.js"></script>
+        <script src="{{ url_for('static', filename='js/jquery.ui.widget.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/jquery.iframe-transport.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/jquery.fileupload.js') }}"></script>
     <!-- jQuery File Upload Dependencies -->
         
     <!-- Main JavaScript file -->
-        <script src="js/script.js"></script>
+        <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <!-- Main JavaScript file -->
 
     <div class="button">
@@ -67,10 +59,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     </div>
     
-</div>
-
-<div class="footer">
-     <p>Copyright &copy; 2015 File Uploader Widget. All Rights Reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
 </div>
     
 </body>
