add result chat

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,10 +21,10 @@
 
         <div class="login-form">
 
-            <form id="upload" method="post" action="/run" enctype="multipart/form-data">
+            <form id="upload" method="post" action="/upload_file" enctype="multipart/form-data">
 
                 <div id="drop">
-                    <a>Upload File</a>
+                    <a>上传文件</a>
                     <input type="file" name="upl" multiple />
                 </div>
 
@@ -52,8 +52,8 @@
 
     <div class="button">
 
-    <div class="cancel"><a href="index.html">Cancel</a></div>
-    <div class="done"><a href="#">Done</a></div>
+    <div class="cancel"><a href="/">取消</a></div>
+    <div class="done"><a href="/run">检测</a></div>
 
     <div class="clear"> </div>
 
